--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
         <script src="wasm_exec.js"></script>
         <script>
             const go = new Go();
-            WebAssembly.instantiateStreaming(fetch("hello.wasm"), go.importObject).then((result) => {
+            WebAssembly.instantiateStreaming(fetch("game.wasm"), go.importObject).then((result) => {
                 go.run(result.instance);
             });
         </script>
