--- a/assets/index.html
+++ b/assets/index.html
@@ -22,6 +22,14 @@
           div#ui > div#player > div#actions {
             margin-top: 16px;
           }
+
+          button {
+            border: 1px solid black;
+            background-color: white;
+            padding: 0.5em;
+            margin-left: 0.2em;
+            margin-right: 0.2em;
+          }
         </style>
         <script src="wasm_exec.js"></script>
         <script>
