--- a/assets/index.html
+++ b/assets/index.html
@@ -100,6 +100,12 @@
 
               actionsContainer.appendChild(button);
             }
+
+            if (state.currentRoom.properties.checkboxes) {
+              displayCheckboxArray();
+            } else {
+              destroyCheckboxArray();
+            }
           };
 
           const inventoryString = function(inventory) {
