--- a/assets/index.html
+++ b/assets/index.html
@@ -64,11 +64,31 @@
             <input type="checkbox" id="checkbox-1" />
             <input type="checkbox" id="checkbox-2" />
             <input type="checkbox" id="checkbox-3" />
-            <br>
             <input type="checkbox" id="checkbox-4" />
+            <br>
             <input type="checkbox" id="checkbox-5" />
             <input type="checkbox" id="checkbox-6" />
             <input type="checkbox" id="checkbox-7" />
+            <input type="checkbox" id="checkbox-8" />
+            <input type="checkbox" id="checkbox-9" />
+            <br>
+            <input type="checkbox" id="checkbox-10" />
+            <input type="checkbox" id="checkbox-11" />
+            <input type="checkbox" id="checkbox-12" />
+            <input type="checkbox" id="checkbox-13" />
+            <input type="checkbox" id="checkbox-14" />
+            <br>
+            <input type="checkbox" id="checkbox-15" />
+            <input type="checkbox" id="checkbox-16" />
+            <input type="checkbox" id="checkbox-17" />
+            <input type="checkbox" id="checkbox-18" />
+            <input type="checkbox" id="checkbox-19" />
+            <br>
+            <input type="checkbox" id="checkbox-20" />
+            <input type="checkbox" id="checkbox-21" />
+            <input type="checkbox" id="checkbox-22" />
+            <input type="checkbox" id="checkbox-23" />
+            <input type="checkbox" id="checkbox-24" />
             <br>
           </div>
         </div>
@@ -195,6 +215,7 @@
                 values.push(selected[i].checked ? 1 : 0);
               }
 
+              console.log("\n", values, "\n");
               action("openBox", values)();
             }
 
