A nicer font; some spacing

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,6 +2,17 @@
     <head>
         <meta charset="utf-8"/>
         <style>
+          * {
+            font-family: Arial, Helvetica, sans-serif;
+          }
+
+          div#ui {
+            margin-top: 32px;
+            margin-left: auto;
+            margin-right: auto;
+            width: 90%;
+          }
+
           div#ui > div {
             margin-bottom: 16px;
           }
