--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,11 @@
             font-family: Arial, Helvetica, sans-serif;
           }
 
+          body {
+            background-color: #151515;
+            color: #e9e8e8;
+          }
+
           div#ui {
             margin-top: 32px;
             margin-left: auto;
@@ -18,16 +23,16 @@
           }
 
           div#ui > div#notifications {
-            color: darkred;
+            color: #e06464;
           }
 
           div#ui > div#notifications > p:last-child {
-            border-bottom: 1px solid darkblue;
+            border-bottom: 1px solid #2f2f9c;
           }
 
           div#ui > div#player {
             padding: 8px;
-            border: 1px solid black;
+            border: 1px solid white;
           }
           
           div#ui > div#player > div#actions {
@@ -41,7 +46,7 @@
           div#ui > div#player > div > div#itemDescription {
             padding: 24px;
             margin-top: 8px;
-            border: 1px solid black;
+            border: 1px solid white;
             max-width: 70%;
           }
 
@@ -50,8 +55,8 @@
           }
           
           button {
-            border: 1px solid black;
-            background-color: white;
+            border: 1px solid #2f2f9c;
+            background-color: #e9e8e8;
             padding: 0.5em;
             margin-left: 0.2em;
             margin-right: 0.2em;
